<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    android:orientation="vertical" >

    <EditText
        android:id="@+id/editGroupName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="2dp"
        android:ems="10"
        android:hint="@string/group_name" >

        <requestFocus />
    </EditText>

    <TableRow
        android:id="@+id/tableRow1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <Button
            android:id="@+id/btAddPeopleToGroup"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="2dp"
            android:layout_weight="1"
            android:background="@drawable/textview_border"
            android:text="@string/add"
            android:textSize="@dimen/text10" />

        <Button
            android:id="@+id/btMove"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="2dp"
            android:layout_weight="1"
            android:background="@drawable/textview_border"
            android:text="@string/people_move"
            android:textSize="@dimen/text10" />
    </TableRow>

    <TableRow
        android:id="@+id/tableRow2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <Button
            android:id="@+id/btAddFromPhoneBook"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="2dp"
            android:layout_weight="1"
            android:background="@drawable/textview_border"
            android:text="@string/add_from_phone"
            android:textSize="@dimen/text10" />

        <Button
            android:id="@+id/btAddGL"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="2dp"
            android:layout_weight="1"
            android:background="@drawable/textview_border"
            android:text="@string/groupLeader"
            android:textSize="@dimen/text10" />
    </TableRow>

    <TextView
        android:id="@+id/tvGL"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_margin="2dp"
        android:hint="@string/tvLeaderName"
        android:text="@string/tvLeaderName" />

    <ListView
        android:id="@+id/lvMembers"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >
    </ListView>

</LinearLayout>