<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	android:orientation="vertical" >

    <TextView
        android:id="@+id/tvCount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="5dp"
        android:text="@string/save_to"
        android:textColor="@color/people_background" />

    <EditText
        android:id="@+id/editPathToSave"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:ems="10" >

        <requestFocus />
    </EditText>

	<Button
		android:id="@+id/buttonSaveDB"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_gravity="center"
		android:layout_margin="10dp"
		android:text="@string/save_db" />

	<TextView
	    android:id="@+id/textView2"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:layout_gravity="center"
	    android:layout_margin="5dp"
	    android:text="@string/restore_from"
	    android:textColor="@color/people_background" />

	<EditText
	    android:id="@+id/editPathFromRestore"
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:layout_margin="10dp"
	    android:ems="10" />

	<Button
	    android:id="@+id/buttonRestoreDB"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:layout_gravity="center"
	    android:layout_margin="10dp"
	    android:text="@string/readDB" />

</LinearLayout>