<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/PeopleList"
    style="@drawable/textview_border"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="5dp"
    android:background="@color/background"
    android:gravity="center"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="igor_m.pp.ua.groupslist.GroupsList" >

    <Button
        android:id="@+id/buttonGroups"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:background="@drawable/textview_border"
        android:text="@string/groups_h" />

    <Button
        android:id="@+id/buttonPeople"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:background="@drawable/textview_border"
        android:text="@string/strPeople" />

    <Button
        android:id="@+id/buttonBooks"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:background="@drawable/textview_border"
        android:text="@string/strBooks" />

    <Button
        android:id="@+id/buttonExit"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:background="@drawable/textview_border"
        android:text="@string/strExit" />

</LinearLayout>