<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
	style="@style/editString"
	android:layout_width="match_parent"
	android:layout_height="fill_parent"
	android:layout_margin="5dp"
	android:background="@color/background" >

	<LinearLayout
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:orientation="vertical" >

		<TextView
			android:id="@+id/tvCount"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_marginLeft="10dp"
			android:layout_marginTop="10dp"
			android:text="@string/name" />

		<EditText
		    android:id="@+id/editName"
		    style="@style/editString"
		    android:layout_width="match_parent"
		    android:layout_height="wrap_content"
		    android:layout_margin="10dp"
		    android:imeOptions="actionNext"
		    android:inputType="textCapWords|textPersonName" >

			<requestFocus />
		</EditText>

		<TextView
			android:id="@+id/textView2"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_marginLeft="10dp"
			android:text="@string/phone" />

		<EditText
		    android:id="@+id/editPhone"
		    style="@style/editString"
		    android:layout_width="match_parent"
		    android:layout_height="wrap_content"
		    android:layout_margin="10dp"
		    android:imeOptions="actionDone"
		    android:inputType="phone" />

		<TextView
		    android:id="@+id/textView3"
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
		    android:layout_marginLeft="10dp"
		    android:text="@string/address"
		    android:visibility="gone" />

		<EditText
		    android:id="@+id/editAddress"
		    style="@style/editString"
		    android:layout_width="match_parent"
		    android:layout_height="wrap_content"
		    android:layout_margin="10dp"
		    android:imeOptions="actionDone"
		    android:inputType="textPostalAddress"
		    android:visibility="gone" />

		<Button
			android:id="@+id/buttonAdd"
			style="@style/buttonStyle"
			android:layout_width="match_parent"
			android:layout_height="0dp"
			android:layout_gravity="bottom"
			android:layout_margin="10dp"
			android:layout_weight="1"
			android:text="@string/saveCapture" />
	</LinearLayout>

</ScrollView>